--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "build": "npx projen build",
     "bundle": "npx projen bundle",
+    "checkNumber": "npx projen checkNumber",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "default": "npx projen default",
@@ -26,26 +27,26 @@
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
-    "@types/node": "^14",
+    "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk": "^2.20.0",
-    "esbuild": "^0.17.5",
+    "esbuild": "^0.17.19",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.27.5",
     "jest": "^27",
-    "jest-junit": "^13",
+    "jest-junit": "^15",
     "npm-check-updates": "^16",
-    "projen": "^0.67.29",
+    "projen": "^0.71.57",
     "ts-jest": "^27",
     "ts-node": "^10",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "aws-cdk-lib": "^2.20.0",
-    "cdk-amazon-chime-resources": "^0.1.220",
+    "cdk-amazon-chime-resources": "^0.1.231",
     "constructs": "^10.0.5"
   },
   "license": "MIT-0",
